--- a/Teaching.html
+++ b/Teaching.html
@@ -6189,7 +6189,7 @@ function recaptchaOnload() {
 <p><u>Current :</u></p> 
 <p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2018</p> 
 <p>PA2565 : Game Engine Architecture (LP2)&nbsp; 2018&nbsp;</p> 
-<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2018&nbsp; (Examiner)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2019&nbsp; (Examiner)</p> 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous :</u></p> 
@@ -6203,7 +6203,7 @@ function recaptchaOnload() {
 <p>DV2549 : Game Engine Architecture (LP1) 2015 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.4/4.0)</p> 
 <p>DV1474 : Visualization (LP3) 2015&nbsp;</p> 
 <p>&nbsp;</p> 
-<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016, 2017&nbsp; (Examiner)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016, 2017, 2018&nbsp; (Examiner)</p> 
 <p>&nbsp;</p> 
 <p>My previous teaching page at INRIA, UJF is&nbsp;<span class="fgColor" style="color:#0054f7;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;http://maverick.inria.fr/~Prashant.Goswami/index.html&quot;,&quot;inNewWin&quot;:false}" href="http://maverick.inria.fr/~Prashant.Goswami/index.html">here</a></span>. I taught a Master level course on "Reconstruction and Geometric Algorithm" at University of Joseph Fourier, Grenoble.</p></div>
 		</div> 
