--- a/Teaching.html
+++ b/Teaching.html
@@ -6195,6 +6195,7 @@ function recaptchaOnload() {
 <p><u>&nbsp;Previous :</u></p> 
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.3/4.0)</p> 
 <p>DV1472 : Artificial Intelligence for Games (LP2) 2017&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.31/4.0)</p> 
+<p>PA2528 : Game Engine Architecture (LP2) 2017&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: - )</p>
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2017 &nbsp; &nbsp;&nbsp;(Course evaluation: 3.33/4.0)</p> 
 <p>DV1472 : Artificial Intelligence for Games (LP2) 2016 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.47/4.0)</p> 
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2016 &nbsp; &nbsp;&nbsp;(Course evaluation: 3.27/4.0)</p> 
