--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,6 +6201,9 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Fritjof Cavallin &amp; Timmie Petersson </font></font></li> 
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mikael Johnson &amp; Simon Gummesson </font></font></li> 
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mattias Fredriksson </font></font></li> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sai Vijay Pola &amp; Advaith Putta</font></font></li> 
 </ul> 
 <p>&nbsp;</p> 
