--- a/Teaching.html
+++ b/Teaching.html
@@ -6189,11 +6189,11 @@ function recaptchaOnload() {
 
 <p><u>Current :</u></p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2019&nbsp; (Examiner)</p> 
-<p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2018</p> 
-<p>PA2565 : Game Engine Architecture (LP2)&nbsp; 2018&nbsp;</p> 
+
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous :</u></p>
+<p>PA2565 : Game Engine Architecture (LP2) 2018&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: - )</p>
 <p>DV1472 : Artificial Intelligence for Games (LP2) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.10/4.0)</p> 
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.3/4.0)</p> 
 <p>DV1472 : Artificial Intelligence for Games (LP2) 2017&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.31/4.0)</p> 
