--- a/Publications.html
+++ b/Publications.html
@@ -6429,6 +6429,18 @@ function recaptchaOnload() {
 		
 		
 		
+<h2 style="padding-left:25px;"><strong>2019</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/MeaningfulIntegrationofData.jpg"/>
+						<b>Meaningful Integration of Data from Heterogeneous Health Services and Home Environment Based on Ontology</b>
+						<br/>
+						Peng Cong, Prashant Goswami
+						<br/><i>Sensors 2019, 19(8), 1747; doi: 10.3390/s19081747</i>, 2019 <br/>
+						<a href="http://bth.diva-portal.org/smash/get/diva2:1259164/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>				
+		
 		
 <h2 style="padding-left:25px;"><strong>2018</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
