--- a/Publications.html
+++ b/Publications.html
@@ -6436,7 +6436,7 @@ function recaptchaOnload() {
 						<br/>
 						Peng Cong, Prashant Goswami
 						<br/><i>Sensors 2019, 19(8), 1747; doi: 10.3390/s19081747</i>, 2019 <br/>
-						<a href="http://bth.diva-portal.org/smash/get/diva2:1259164/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.mdpi.com/1424-8220/19/8/1747/htm" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 </ul>				
