--- a/Publications.html
+++ b/Publications.html
@@ -6526,7 +6526,7 @@ function recaptchaOnload() {
 						<br/>
 						Bin Sun, Wei Cheng, Guohua Bai, Prashant Goswami
 						<br/><i>Technical Gazette, ISSN 1330-3651, E-ISSN 1848-6339, Vol. 24, no 5, p. 1597-1607,</i>, 2017 <br/>
-						<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8024503&tag=1" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.researchgate.net/publication/315677027_Correcting_and_Complementing_Freeway_Traffic_Accident_Data_Using_Mahalanobis_Distance_Based_Outlier_Detection target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>			
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/E2FE65446569781A.png"/>
@@ -6715,7 +6715,7 @@ function recaptchaOnload() {
 						<br/>
 						Jonas Bösch, Prashant Goswami, Renato Pajarola
 						<br/><i>Proceedings of Eurographics Area Paper, pp. 35-42,</i>, 2010 <br/>
-						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/SCA10_SPH.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="http://maverick.inria.fr/~Prashant.Goswami/Research/Papers/RASTeR_EG09.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=1rsDsg27ph0" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
