--- a/Publications.html
+++ b/Publications.html
@@ -6431,6 +6431,15 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2019</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/SnowEGPGV.png"/>
+						<b>Real-time particle-based snow simulation on the GPU</b>
+						<br/>
+						Prashant Goswami, Christian Markowicz*, Ali Hassan* (* indicates equal contribution)
+						<br/><i>To Appear, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2019 <br/>
+						<a href="https://www.youtube.com/watch?v=RAYHRxgY9Fc" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/MeaningfulIntegrationofData.jpg"/>
 						<b>Meaningful Integration of Data from Heterogeneous Health Services and Home Environment Based on Ontology</b>
 						<br/>
