--- a/Publications.html
+++ b/Publications.html
@@ -6728,7 +6728,13 @@ function recaptchaOnload() {
 						<a href="https://www.youtube.com/watch?v=1rsDsg27ph0" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 </li>
-</ul>
+</ul></div>
+		</div> 
+	    		</div>
+	        </div>
+			
+		</div>
+	</div>
 
 	<br><br><br><br><br><br>
 	<footer>
