--- a/index.html
+++ b/index.html
@@ -6273,13 +6273,11 @@ function recaptchaOnload() {
 		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div>
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">Our poster on "<strong>Comparing Traditional Key Frame and Hybrid Animation</strong>" is accepted at SCA&nbsp;2017, Los Angeles</span></li>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">April 2019: Our paper "<strong>Real-time particle-based snow simulation on the GPU</strong>" is accepted at EGPGV&nbsp;2019, Porto</span></li>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">2018: Published 5 papers with PhD students</span></li>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">November 2018: <strong>Bin Sun</strong>" successfully defended his PhD dissertation</span></li>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">July 2017: Our poster on "<strong>Comparing Traditional Key Frame and Hybrid Animation</strong>" is accepted at SCA&nbsp;2017, Los Angeles</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">March 2017: Our paper "<strong>Real-time landscape-size convective clouds simulation and rendering</strong>" has been accepted at VRIPHYS 2017, Lyon</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">Jan 2017: Our paper "<strong>Correcting and complementing freeway traffic accident data using Mahalanobis distance based outlier detection</strong>" has accepted in the journal Technical Gazette (to be published in October 2017 issue)</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">Our paper "<strong>Selective rasterized ray-traced reflections on the GPU</strong>" is accepted at STAG 2016 (Italian Eurographics Chapter), Genova</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">April 16: Our paper "<strong>Dynamic Creation of Multi-resolution Triangular Irregular Network</strong>" is accepted at SIGRAD 2016</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">Oct' 15: 2 (now) + 3 (June) Master thesis successfully defended</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">Sep '15: Our paper "<strong>Implicit Incompressible SPH on the GPU</strong>" has been accepted at the VRIPHYS 2015 conference, Lyon</span></li>
 </ul>
 </div>
 		</div><div id="el-124103" class="element text-element  "> 
