--- a/index.html
+++ b/index.html
@@ -6288,8 +6288,8 @@ function recaptchaOnload() {
 		</div><div id="el-64209" class="element text-element  "> 
 		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Senior Lecturer</strong></span></p>
 
-<li><span class="fontSize" style="font-size: 14px; line-height: 1;"><strong>Department of Computer Science (DIDA)</strong></span></li>
-<li><span class="fontSize" style="font-size: 14px; line-height: 1;"><strong>Blekinge Institute of Technology (BTH) </strong></span></li>
+<p><span class="fontSize" style="font-size: 14px; line-height: 1;"><strong>Department of Computer Science (DIDA)</strong></span></p>
+<p><span class="fontSize" style="font-size: 14px; line-height: 1;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
 
 <p>&nbsp;</p>
 
