--- a/Publications.html
+++ b/Publications.html
@@ -6436,7 +6436,7 @@ function recaptchaOnload() {
 						<br/>
 						Prashant Goswami, Christian Markowicz*, Ali Hassan* (* indicates equal contribution)
 						<br/><i>To Appear, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2019 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="http://bth.diva-portal.org/smash/get/diva2:1320769/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=RAYHRxgY9Fc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
