--- a/Supervision.html
+++ b/Supervision.html
@@ -6203,7 +6203,8 @@ function recaptchaOnload() {
 <ul> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mikael Johnson &amp; Simon Gummesson </font></font></li> 
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mattias Fredriksson </font></font></li> 
-
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Kim Enarsson </font></font></li> 
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">David Pejtersen </font></font></li> 
 </ul> 
 <p>&nbsp;</p> 
 <p><u>Previous :</u></p> 
