--- a/Supervision.html
+++ b/Supervision.html
@@ -6188,7 +6188,7 @@ function recaptchaOnload() {
 		<div class="text-content"><h4><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Supervision</font></font></strong></h4> 
 <p>I am the examiner for&nbsp;DV1478 (Bachelor thesis in Game Development) and TE2501 (Master thesis in Game Development).</p> 
 <p>I am supervising following students for their thesis at BTH:</p> 
-<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">PhD student:</span></h5> 
+<h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD student:</span></h5> 
 <p><u>Current</u></p> 
 <ul> 
  <li><span class="fgColor" style="color:#070efa;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=87g_0KgAAAAJ&amp;hl=en" target="_blank"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peng Cong</font></font></a></span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> (co-supervisor)</font></font></li> 
