--- a/Supervision.html
+++ b/Supervision.html
@@ -6185,7 +6185,7 @@ function recaptchaOnload() {
 	    	<div class="container">
 				<div id="content-wrapper" class="container-wrapper">
 					<div id="el-124109" class="element text-element  "> 
-		<div class="text-content"><h4><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Supervision</font></font></strong></h4> 
+		<div class="text-content"><h4><strong><font style="vertical-align: inherit;color:#F08080"><font style="vertical-align: inherit;">Supervision</font></font></strong></h4> 
 <p>I am the examiner for&nbsp;DV1478 (Bachelor thesis in Game Development) and TE2501 (Master thesis in Game Development).</p> 
 <p>I am supervising following students for their thesis at BTH:</p> 
 <h5><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;style=color: rgb(100, 134, 255);">PhD student:</span></h5> 
