--- a/Publications.html
+++ b/Publications.html
@@ -6432,6 +6432,15 @@ function recaptchaOnload() {
 <h2 style="padding-left:25px;"><strong>2019</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/SnowEGPGV.png"/>
+						<b>Interactive animation of single-layer cumulus clouds using cloud map</b>
+						<br/>
+						Prashant Goswami
+						<br/><i>To Appear, Smart Tools and Applications in Graphics (EG Chapter Italy)</i>, 2019 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=9rRVfMT-H3c&t=7s" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/SnowEGPGV.png"/>
 						<b>Real-time particle-based snow simulation on the GPU</b>
 						<br/>
 						Prashant Goswami, Christian Markowicz*, Ali Hassan* (* indicates equal contribution)
