--- a/index.html
+++ b/index.html
@@ -6286,7 +6286,7 @@ function recaptchaOnload() {
 		<div class="text-content paragraph2 "><p class="paragraph2" data-angle="0" data-canvas-width="574.7424" data-font-name="g_font_2" style="text-align: justify;">Dr. Prashant Goswami is a Senior Lecturer (equivalent to Assistant Professor by the American system) in the&nbsp;<a href="http://www2.bth.se/com/gsil/computergraphics">Department of Computer Science (DIDA)</a>, falling under the&nbsp;<a href="http://www2.bth.se/eng/about-bth.nsf/pages/faculty-of-computing" target="_blank">Faculty of Computing</a>&nbsp; at&nbsp;<a href="http://www2.bth.se/" target="_blank">BTH (Blekinge Institute of Technology)</a>. He started his current position in November 2014. He obtained his B. Tech and M. Tech (dual degree) in&nbsp;<a href="http://www.cse.iitd.ernet.in/" target="_blank">Computer Science and Engineering</a>&nbsp;from the Indian Institute of Technology (IIT), New Delhi in (2000-)2005. After spending two years in the industry, he started his PhD at University of Zurich in July 2007. He successfully defended his dissertation titled "Level-of-detail and Parallel Solutions in Computer Graphics" in December 2011. He spent little more than a year as a Research Fellow at the&nbsp;<a href="http://www3.gamelab.ntu.edu.sg/" target="_blank">gameLab</a>&nbsp;at Nanyang Technological University, Singapore (March 2012 - April 2013) where he worked in the field of geometric modeling. He was a postdoc at the&nbsp;<a href="http://maverick.inria.fr/" target="_blank">MAVERICK</a>&nbsp;group at INRIA, Grenoble (August 2013 - November 2014) where he focused on real-time landscape-size convective cloud simulation before moving to BTH.</p>
 </div>
 		</div><div id="el-64209" class="element text-element  "> 
-		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Senior Lecturer</strong></span></p>
+		<div class="text-content hasFontScale" data-fontscale="0.9"><p><span class="fontSize" style="font-size: 20px; line-height: 1;"><strong>Assistant Professor</strong></span></p>
 
 <p><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Department of Computer Science (DIDA)</strong></span></p>
 <p><span class="fontSize" style="font-size: 14px; line-height: 85%;"><strong>Blekinge Institute of Technology (BTH) </strong></span></p>
@@ -6297,7 +6297,7 @@ function recaptchaOnload() {
 
 <p><span class="fgColor fg-C3"><em><strong>Phone:</strong></em></span> +0 (46)&nbsp;455-385826</p>
 
-<p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> J3228 BTH Karlskrona 371 41</p>
+<p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room:J3624, BTH Karlskrona 371 41</p>
 </div>
 		</div><div id="el-124097" class="element text-element  "> 
 		<div class="text-content"><h3 class="title3"><span class="fgColor fg-D3">News:</span></h3>
