--- a/index.html
+++ b/index.html
@@ -6297,7 +6297,7 @@ function recaptchaOnload() {
 
 <p><span class="fgColor fg-C3"><em><strong>Phone:</strong></em></span> +0 (46)&nbsp;455-385826</p>
 
-<p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room:J3624, BTH Karlskrona 371 41</p>
+<p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room J3624, BTH Karlskrona 371 41</p>
 </div>
 		</div><div id="el-124097" class="element text-element  "> 
 		<div class="text-content"><h3 class="title3"><span class="fgColor fg-D3">News:</span></h3>
