--- a/index.html
+++ b/index.html
@@ -6273,6 +6273,7 @@ function recaptchaOnload() {
 		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div>
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">October 2019: Our paper "<strong>Interactive animation of single-layer cumulus clouds using cloud map</strong>" is accepted at STAG&nbsp;2019, Cagliari</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">April 2019: Our paper "<strong>Real-time particle-based snow simulation on the GPU</strong>" is accepted at EGPGV&nbsp;2019, Porto</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">December 2018: Published 5 papers with PhD students this year</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">November 2018: <strong>Bin Sun</strong> successfully defended his PhD dissertation</span></li>
