--- a/Publications.html
+++ b/Publications.html
@@ -6435,8 +6435,8 @@ function recaptchaOnload() {
 						<b>Interactive animation of single-layer cumulus clouds using cloud map</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>To Appear, Smart Tools and Applications in Graphics (EG Chapter Italy)</i>, 2019 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>ISSN: 2617-4855, Smart Tools and Applications in Graphics (EG Chapter Italy)</i>, 2019 <br/>
+						<a href="http://bth.diva-portal.org/smash/get/diva2:1371271/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=9rRVfMT-H3c&t=7s" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6444,7 +6444,7 @@ function recaptchaOnload() {
 						<b>Real-time particle-based snow simulation on the GPU</b>
 						<br/>
 						Prashant Goswami, Christian Markowicz*, Ali Hassan* (* indicates equal contribution)
-						<br/><i>To Appear, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2019 <br/>
+						<br/><i>ISSN: 1727-348X, Eurographics Symposium on Parallel Graphics and Visualization (EGPGV)</i>, 2019 <br/>
 						<a href="http://bth.diva-portal.org/smash/get/diva2:1320769/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=RAYHRxgY9Fc" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
