--- a/Publications.html
+++ b/Publications.html
@@ -6431,6 +6431,13 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2019</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/LiteratureReview19.png"/>
+						<b>A literature review of current technologies on health data integration for patient-centered health management</b>
+						<br/>
+						Peng Cong, Prashant Goswami, Guohua Bai
+						<br/><i>Health Informatics Journal, ISSN 1460-4582, E-ISSN 1741-2811, doi:10.1177/146045821989238 </i>, 2019 <br/>
+						<a href="https://journals.sagepub.com/doi/10.1177/1460458219892387" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAG2019.png"/>
 						<b>Interactive animation of single-layer cumulus clouds using cloud map</b>
 						<br/>
