--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6221,6 +6221,7 @@ function recaptchaOnload() {
 	<li>ACM SIGSPATIAL International Conference</li>
 	<li>Eurographics Parallel Graphics and Visualization</li>
 	<li>ACM SIGGRAPH High-Performance Graphics</li>
+	<li>Engineering Applications of Artificial Intelligence</li>
 	<li>Journal of Zhejiang University Science C (Computers &amp; Electronics)</li>
 </ul>
 </div>
