--- a/Teaching.html
+++ b/Teaching.html
@@ -6193,9 +6193,11 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous :</u></p>
+<p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2019&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.20/4.0)</p>
+<p>DV2591 : Game Engine Architecture (LP2) 2019&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.8/4.0)</p>
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2019&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.4/4.0)</p> 
 <p>PA2565 : Game Engine Architecture (LP2) 2018&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: - )</p>
-<p>DV1472 : Artificial Intelligence for Games (LP2) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.10/4.0)</p> 
+<p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.10/4.0)</p> 
 <p>DV2557 : Applied Artificial Intelligence (LP1) 2018&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.3/4.0)</p> 
 <p>DV1472 : Artificial Intelligence for Games (LP2) 2017&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.31/4.0)</p> 
 <p>PA2528 : Game Engine Architecture (LP2) 2017&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: - )</p>
@@ -6207,7 +6209,10 @@ function recaptchaOnload() {
 <p>DV2549 : Game Engine Architecture (LP1) 2015 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.4/4.0)</p> 
 <p>DV1474 : Visualization (LP3) 2015&nbsp;</p> 
 <p>&nbsp;</p> 
-<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016, 2017, 2018&nbsp; (Examiner)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2019  (Examiner) (Course evaluation: 3.4/4.0)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2018 (Examiner) (Course evaluation: 3.7/4.0)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2017 (Examiner) (Course evaluation: 2.6/4.0)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016(Examiner)</p> 
 <p>&nbsp;</p> 
 <p>My previous teaching page at INRIA, UJF is&nbsp;<span class="fgColor" style="color:#0054f7;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;http://maverick.inria.fr/~Prashant.Goswami/index.html&quot;,&quot;inNewWin&quot;:false}" href="http://maverick.inria.fr/~Prashant.Goswami/index.html">here</a></span>. I taught a Master level course on "Reconstruction and Geometric Algorithm" at University of Joseph Fourier, Grenoble.</p></div>
 		</div> 
