--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,6 +6201,12 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jesper Åkesson </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Fredrik Junede &amp; Samuel Asp </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Viktor Enfeldt </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Patrik Sjölund </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tristan Axelsson Smith </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Filip Lundbeck </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mattias Fredriksson </font></font></li> 
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Kim Enarsson </font></font></li> 
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">David Pejtersen </font></font></li> 
