--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6213,6 +6213,7 @@ function recaptchaOnload() {
 	<li>Visual Computer</li>
 	<li>IEEE Computer Graphics and Applications</li>
 	<li>IEEE Conference on Virtual Reality and 3D User Interfaces</li>
+	<li>IEEE Access</li>
 	<li>Eurographics</li>
 	<li>Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS)</li>
 	<li>Symmetry Journal</li>
