--- a/Supervision.html
+++ b/Supervision.html
@@ -6236,6 +6236,13 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Bachelor thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sebastian Tillgren </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Alexander Danliden + Steven Cederrand </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pawan Kumar Sarika </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oscar Östberg </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Naga Sai Dattu Appaji </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Tim Lagerqvist + Paulina Frisk </font></font></li>
+	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Emil Lindholm </font></font></li>
  </ul> 
 <p>&nbsp;</p> 
 <p><u>Previous :</u></p> 
