--- a/Publications.html
+++ b/Publications.html
@@ -6429,6 +6429,20 @@ function recaptchaOnload() {
 		
 		
 		
+<h2 style="padding-left:25px;"><strong>2020/strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAG2019.png"/>
+						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
+						<br/>
+						Prashant Goswami
+						<br/><i>The Visual Computer (To Appear) </i>, 2020 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>			
+		
+		
 <h2 style="padding-left:25px;"><strong>2019</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/LiteratureReview19.png"/>
