--- a/Publications.html
+++ b/Publications.html
@@ -6431,7 +6431,7 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2020</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
-<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/E5E7A76B34ED7FBA.jpg"/>
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VisualComp2020.png"/>
 						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
 						<br/>
 						 Prashant Goswami
