--- a/Publications.html
+++ b/Publications.html
@@ -6436,7 +6436,7 @@ function recaptchaOnload() {
 						<br/>
 						 Prashant Goswami
 						<br/><i> The Visual Computer (To Appear) </i>, 2020 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://link.springer.com/content/pdf/10.1007/s00371-020-01953-y.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
 </li>
