--- a/Publications.html
+++ b/Publications.html
@@ -6435,7 +6435,7 @@ function recaptchaOnload() {
 						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
 						<br/>
 						 Prashant Goswami
-						<br/><i> The Visual Computer (To Appear) </i>, 2020 <br/>
+						<br/><i> The Visual Computer (DOI:https://doi.org/10.1007/s00371-020-01953-y) </i>, 2020 <br/>
 						<a href="https://link.springer.com/content/pdf/10.1007/s00371-020-01953-y.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
