--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6190,6 +6190,8 @@ function recaptchaOnload() {
 <p>I have served&nbsp;in&nbsp;the international Technical Program Committee for</p>
 
 <ul>
+	<li> STAG 2020 (Italy)</li>
+	<li> VISUAL 2020 (Porto, Portugal)</li>
 	<li>VRIPHYS 2019 (Genova, Italy)</li>
 	<li>VISUAL 2019 (Rome Italy)</li>
 	<li>VISUAL 2018 (Venice, Italy)</li>
