--- a/Publications.html
+++ b/Publications.html
@@ -6431,6 +6431,15 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2020</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/SPH_RTS.png"/>
+						<b>Asynchronous Liquids: Regional Time Stepping for Faster SPH and PCISPH</b>
+						<br/>
+						Prashant Goswami, Christopher Batty
+						<br/><i>arXiv:2009.14514 </i>, 2020 <br/>
+						<a href="https://arxiv.org/pdf/2009.14514.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=nfAcK8XSSFc" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/VisualComp2020.png"/>
 						<b>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</b>
 						<br/>
