--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6204,19 +6204,20 @@ function recaptchaOnload() {
 <p>I have reviewed papers for the following journals / conferences :</p>
 
 <ul>
-	<li>IEEE Transactions on Visualization and Computer Graphics</li>
-	<li>Computer Graphics Forum</li>
-	<li>ACM Transactions on Applied Perception</li>
-	<li>Computers and Graphics</li>
+	<li>IEEE Transactions on Visualization and Computer Graphics Journal</li>
+	<li>Computer Graphics Forum Journal</li>
+	<li>ACM Transactions on Applied Perception Journal</li>
+	<li>Computers and Graphics Journal</li>
 	<li>Computer Graphics International</li>
 	<li>IEEE Transactions on Parallel and Distributed Systems</li>
 	<li>Pacific Graphics</li>
 	<li>Journal of Parallel and Distributed Computing</li>
-	<li>Visual Computer</li>
-	<li>IEEE Computer Graphics and Applications</li>
+	<li>Visual Computer Journal</li>
+	<li>IEEE Computer Graphics and Applications Journal</li>
 	<li>IEEE Conference on Virtual Reality and 3D User Interfaces</li>
 	<li>IEEE Access</li>
 	<li>Eurographics</li>
+	<li>Graphical Models Journal </li>	
 	<li>Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS)</li>
 	<li>Symmetry Journal</li>
 	<li>Transactions on Haptics</li>
@@ -6225,7 +6226,7 @@ function recaptchaOnload() {
 	<li>Eurographics Parallel Graphics and Visualization</li>
 	<li>ACM SIGGRAPH High-Performance Graphics</li>
 	<li>Engineering Applications of Artificial Intelligence</li>
-	<li>Journal of Zhejiang University Science C (Computers &amp; Electronics)</li>
+	<li>Journal of Zhejiang University Science C Journal(Computers &amp; Electronics)</li>
 </ul>
 </div>
 		</div> 
