--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,7 +6201,7 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
-  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Adrian Nordin &amp; Simon Nyl&‌eacuten </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Adrian Nordin &amp; Simon Nylén </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Åleskong &amp; Daniel Cheh </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Theo Berlin Holmqvist </font></font></li> 
