--- a/Supervision.html
+++ b/Supervision.html
@@ -6205,6 +6205,7 @@ function recaptchaOnload() {
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Åleskong &amp; Daniel Cheh </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Theo Berlin Holmqvist </font></font></li> 
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Herman Hansson Söderlund (@ NVIDIA) </font></font></li> 
 
 </ul> 
 <p>&nbsp;</p> 
