--- a/Publications.html
+++ b/Publications.html
@@ -6427,6 +6427,19 @@ function recaptchaOnload() {
 					<div id="el-124107" class="element text-element  "> 
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
+
+<h2 style="padding-left:25px;"><strong>2021</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/JCGT2021.png"/>
+						<b>A Polarizing Filter Function for Real-Time Rendering</b>
+						<br/>
+						Viktor Enfeldt, Prashant Goswami
+						<br/><i>Journal of Computer Graphics Techniques (JCGT), Conditionally accepted </i>, 2021 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=3nMkQh3mKsI" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>
 		
 		
 <h2 style="padding-left:25px;"><strong>2020</strong></h2> 
@@ -6456,6 +6469,7 @@ function recaptchaOnload() {
 						<br/><i>Health Informatics Journal, ISSN 1460-4582, E-ISSN 1741-2811, doi:10.1177/146045821989238 </i>, 2020 <br/>
 						<a href="https://journals.sagepub.com/doi/10.1177/1460458219892387" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
+</li>
 </ul>
 					
 		
