--- a/index.html
+++ b/index.html
@@ -6274,10 +6274,10 @@ function recaptchaOnload() {
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">February 2021: Our paper "<strong>A Polarizing Filter Function for Real-Time Rendering</strong>" with Viktor Enfeldt is conditionally accepted at the Journal of Computer Graphics Techniques</span></li>
+	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">March 2021: Our survey paper on "<strong>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</strong>" in the Visual Computer Journal has been accessed nearly 3000 times</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">July 2020: Our survey paper on "<strong>A Survey of Modeling, Rendering and Animation of Clouds in Computer Graphics</strong>" is accepted at the Visual Computer Journal</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">October 2019: Our paper "<strong>Interactive animation of single-layer cumulus clouds using cloud map</strong>" is accepted at STAG&nbsp;2019, Cagliari</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">April 2019: Our paper "<strong>Real-time particle-based snow simulation on the GPU</strong>" is accepted at EGPGV&nbsp;2019, Porto</span></li>
-	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">December 2018: Published 5 papers with PhD students this year</span></li>
 	<li><span class="fontSize" style="font-size: 12px; line-height: 1;">November 2018: <strong>Bin Sun</strong> successfully defended his PhD dissertation</span></li>
 	
 </ul>
