--- a/ResearchInterests.html
+++ b/ResearchInterests.html
@@ -6191,11 +6191,15 @@ function recaptchaOnload() {
  <li>GPU-based stuff&nbsp;</li> 
  <li>Simplification and rendering of huge datasets (points, meshes)</li> 
  <li>Fluid simulation&nbsp;</li> 
- <li>Real-time physics-inspired procedural cloud animation&nbsp;</li> 
+ <li>Cloud animation&nbsp;</li> 
+ <li>Snow simulation&nbsp;</li>
+ <li>Physics-inspired, efficient procedural animations&nbsp;</li>
  <li>Parallel rendering&nbsp;</li> 
- <li>Geometric modeling&nbsp;</li> 
+ <li>Artificial Intelligence&nbsp;</li> 
+ <li>Game design and Artificial Intelligence in Games&nbsp;</li> 
+  <li>Geometric modeling&nbsp;</li> 
 </ul> 
-<p><br> I am always open to experiment on new and exciting topics.</p> 
+<p><br> I am always open to experiment on new and exciting topics. I have co-supervised PhD students on traffic data analysis and eHealth.</p> 
 <p><u><strong>Publications</strong></u></p> 
 <p>My updated list of publications is&nbsp;<a data-linkto="{&quot;type&quot;:&quot;Page&quot;,&quot;src&quot;:&quot;publications&quot;,&quot;pageId&quot;:&quot;245409&quot;,&quot;inNewWin&quot;:false}" href="Publications.html"><span class="fgColor" style="color:#0026fd;">here</span></a>.</p> 
 <p>My google scholar profile is<a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=TGmVSaQAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:false}" href="https://scholar.google.com/citations?user=TGmVSaQAAAAJ&amp;hl=en">&nbsp;</a><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?user=TGmVSaQAAAAJ&amp;hl=en&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?user=TGmVSaQAAAAJ&amp;hl=en" target="_blank"><span class="fgColor" style="color:#0026fd;">here</span></a>.</p> 
