--- a/Supervision.html
+++ b/Supervision.html
@@ -6202,7 +6202,7 @@ function recaptchaOnload() {
 <p><u>Current:</u></p> 
 <ul> 
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Adrian Nordin &amp; Simon Nylén </font></font></li>
-  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Åleskong &amp; Daniel Cheh </font></font></li>
+  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Jonathan Åleskog &amp; Daniel Cheh </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Linus Rosenholm </font></font></li>
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Theo Berlin Holmqvist </font></font></li> 
   <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Herman Hansson Söderlund (@ NVIDIA) </font></font></li> 
